--- a/portfolio/portfolio/reqs/requirements2.html
+++ b/portfolio/portfolio/reqs/requirements2.html
@@ -1096,7 +1096,7 @@
 	<div style="text-align: left; width: 300">
 		<a href="5_door_control.jpg"><img alt="5_door_control.jpg"
 			src="5_door_control.jpg"
-			style="border: 0px solid; width: 1088px; height: 608px;"></a><br>
+			style="border: 0px solid; width: 1129px; height: 764px;"></a><br>
 	</div>
 	<!--Insert table for Door Control -->
 	<table style="text-align: left; width: 850;" border="1" cellpadding="2"
@@ -1110,8 +1110,9 @@
 			<tr>
 				<td style="vertical-align: top;">T5.1<br>
 				</td>
-				<td style="vertical-align: top;">mAtFloor[f,
-					b]&nbsp;&larr;&nbsp;True&nbsp;
+				<td style="vertical-align: top;">
+					mAtFloor[f, b]&nbsp;&larr;&nbsp;True&nbsp;
+					AND&nbsp;Call[f, b]&nbsp;&larr;&nbsp;True&nbsp;
 					AND&nbsp;f&nbsp;==&nbsp;mDesiredFloor.f&nbsp;
 					AND&nbsp;mDriveSpeed&nbsp;==&nbsp;(0, STOP) <br>
 				</td>
@@ -1119,94 +1120,165 @@
 			<tr>
 				<td style="vertical-align: top;">T5.2<br>
 				</td>
-				<td style="vertical-align: top;">mDoorOpened[b,r]&nbsp;&larr;&nbsp;True
-					<br>
+				<td style="vertical-align: top;">
+					mAtFloor[f, b]&nbsp;&larr;&nbsp;True&nbsp;
+					AND&nbsp;mCarWeight&nbsp;&gt;=&nbsp;MaxCarCapacity<br>
 				</td>
 			</tr>
 			<tr>
 				<td style="vertical-align: top;">T5.3<br>
 				</td>
-				<td style="vertical-align: top;">CountDown&nbsp;&lt;&nbsp;0 <br>
+				<td style="vertical-align: top;">
+					mDoorClosed[b, r']&nbsp;&larr;&nbsp;True <br>
 				</td>
 			</tr>
 			<tr>
 				<td style="vertical-align: top;">T5.4<br>
 				</td>
-				<td style="vertical-align: top;">mDoorClosed[b,r]&nbsp;&larr;&nbsp;True
-					<br>
+				<td style="vertical-align: top;">
+					mAtFloor[f, b]&nbsp;&larr;&nbsp;True&nbsp;
+					AND&nbsp;Call[f, b]&nbsp;&larr;&nbsp;True&nbsp;
+					AND&nbsp;f&nbsp;==&nbsp;mDesiredFloor.f&nbsp;
+					AND&nbsp;mDriveSpeed&nbsp;==&nbsp;(0, STOP) <br>
 				</td>
 			</tr>
 			<tr>
 				<td style="vertical-align: top;">T5.5<br>
 				</td>
-				<td style="vertical-align: top;">mCarWeight&nbsp;&gt;=&nbsp;MaxCarCapacity
-					<br>
+				<td style="vertical-align: top;">
+					mAtFloor[f, b]&nbsp;&larr;&nbsp;True&nbsp;
+					AND&nbsp;mCarWeight&nbsp;&gt;=&nbsp;MaxCarCapacity<br>
 				</td>
 			</tr>
 			<tr>
 				<td style="vertical-align: top;">T5.6<br>
 				</td>
-				<td style="vertical-align: top;">mCarWeight&nbsp;&gt;=&nbsp;MaxCarCapacity
-					<br>
+				<td style="vertical-align: top;">
+					mDoorClosed[b, r']&nbsp;&larr;&nbsp;False<br>
 				</td>
 			</tr>
 			<tr>
 				<td style="vertical-align: top;">T5.7<br>
 				</td>
-				<td style="vertical-align: top;">mDoorReversal[b,r]&nbsp;&larr;&nbsp;True
-					<br>
+				<td style="vertical-align: top;">
+					mDoorOpened[b, r]&nbsp;&larr;&nbsp;True <br>
 				</td>
 			</tr>
 			<tr>
 				<td style="vertical-align: top;">T5.8<br>
 				</td>
-				<td style="vertical-align: top;">mDoorOpened[b,r]&nbsp;&larr;&nbsp;True
-					<br>
+				<td style="vertical-align: top;">
+					CountDown&nbsp;&lt;&nbsp;0 &nbsp;
+					mCarWeight&nbsp;&lt;&nbsp;MaxCarCapacity<br>
 				</td>
 			</tr>
 			<tr>
 				<td style="vertical-align: top;">T5.9<br>
 				</td>
-				<td style="vertical-align: top;">CountDown&nbsp;&lt;&nbsp;0 <br>
+				<td style="vertical-align: top;">
+					mDoorOpened[b, r']&nbsp;&larr;&nbsp;True <br>
 				</td>
 			</tr>
 			<tr>
 				<td style="vertical-align: top;">T5.10<br>
 				</td>
-				<td style="vertical-align: top;">mDoorClosed[b,r]&nbsp;&larr;&nbsp;True
-					<br>
+				<td style="vertical-align: top;">
+					mDoorOpened[b, r']&nbsp;&larr;&nbsp;False <br>
 				</td>
 			</tr>
 			<tr>
 				<td style="vertical-align: top;">T5.11<br>
 				</td>
-				<td style="vertical-align: top;">mDoorReversal[b,r]&nbsp;&larr;&nbsp;True
-					<br>
+				<td style="vertical-align: top;">
+					CountDown&nbsp;&lt;&nbsp;0&nbsp;
+					AND&nbsp;CarWeight&nbsp;&lt;&nbsp;MaxCarCapacity <br>
 				</td>
 			</tr>
 			<tr>
 				<td style="vertical-align: top;">T5.12<br>
 				</td>
-				<td style="vertical-align: top;">mCarWeight&nbsp;&gt;=&nbsp;MaxCarCapacity
-					<br>
+				<td style="vertical-align: top;">
+					mCarWeight&nbsp;&gt;=&nbsp;MaxCarCapacity&nbsp;
+					AND&nbsp;mAtFloor[f, b]&nbsp;&larr;&nbsp;True<br>
 				</td>
 			</tr>
 			<tr>
 				<td style="vertical-align: top;">T5.13<br>
 				</td>
-				<td style="vertical-align: top;">mAtFloor[f,
-					b]&nbsp;&larr;&nbsp;True&nbsp;
-					AND&nbsp;f&nbsp;==&nbsp;mDesiredFloor.f&nbsp;
-					AND&nbsp;mDriveSpeed&nbsp;==&nbsp;(0, STOP) <br>
+				<td style="vertical-align: top;">
+					mDoorClosed[b, r]&nbsp;&larr;&nbsp;True <br>
 				</td>
 			</tr>
 			<tr>
 				<td style="vertical-align: top;">T5.14<br>
 				</td>
-				<td style="vertical-align: top;">mAtFloor[f,
-					b]&nbsp;&larr;&nbsp;True&nbsp;
-					AND&nbsp;f&nbsp;==&nbsp;mDesiredFloor.f&nbsp;
-					AND&nbsp;mDriveSpeed&nbsp;==&nbsp;(0, STOP) <br>
+				<td style="vertical-align: top;">
+					mDoorReversal[b, r]&nbsp;&larr;&nbsp;True&nbsp;
+					AND&nbsp;mAtFloor[f, b]&nbsp;&larr;&nbsp;True <br>
+				</td>
+			</tr>
+			<tr>
+				<td style="vertical-align: top;">T5.15<br>
+				</td>
+				<td style="vertical-align: top;">
+					mDoorOpenend[b, r]&nbsp;&larr;&nbsp;True <br>
+				</td>
+			</tr>
+			<tr>
+				<td style="vertical-align: top;">T5.16<br>
+				</td>
+				<td style="vertical-align: top;">
+					CountDown&nbsp;&lt;=&nbsp;0<br>
+				</td>
+			</tr>
+			<tr>
+				<td style="vertical-align: top;">T5.17<br>
+				</td>
+				<td style="vertical-align: top;">
+					mDoorOpened[b, r']&nbsp;&larr;&nbsp;True <br>
+				</td>
+			</tr>
+			<tr>
+				<td style="vertical-align: top;">T5.18<br>
+				</td>
+				<td style="vertical-align: top;">
+					mDoorOpened[b, r']&nbsp;&larr;&nbsp;False <br>
+				</td>
+			</tr>
+			<tr>
+				<td style="vertical-align: top;">T5.19<br>
+				</td>
+				<td style="vertical-align: top;">
+					CountDown&nbsp;&lt;=&nbsp;0<br>
+				</td>
+			</tr>
+			<tr>
+				<td style="vertical-align: top;">T5.20<br>
+				</td>
+				<td style="vertical-align: top;">
+					mDoorClosed[b, r']&nbsp;&larr;&nbsp;True <br>
+				</td>
+			</tr>
+			<tr>
+				<td style="vertical-align: top;">T5.21<br>
+				</td>
+				<td style="vertical-align: top;">
+					mDoorClosed[b, r']&nbsp;&larr;&nbsp;True <br>
+				</td>
+			</tr>
+			<tr>
+				<td style="vertical-align: top;">T5.22<br>
+				</td>
+				<td style="vertical-align: top;">
+					WaitTime&nbsp;&lt;=&nbsp;0 <br>
+				</td>
+			</tr>
+			<tr>
+				<td style="vertical-align: top;">T5.23<br>
+				</td>
+				<td style="vertical-align: top;">
+					mCarWeight&nbsp;&gt;=&nbsp;MaxCarCapacity&nbsp;
+					AND&nbsp;mAtFloor[f, b]&nbsp;&larr;&nbsp;True<br>
 				</td>
 			</tr>
 		</tbody>
