--- a/portfolio/portfolio/reqs/requirements2.html
+++ b/portfolio/portfolio/reqs/requirements2.html
@@ -1833,7 +1833,7 @@
 			<tr>
 				<td style="vertical-align: top;">T5.13<br>
 				</td>
-				<td style="vertical-align: top;"><br> <!--5.6--></td>
+				<td style="vertical-align: top;">X<br> <!--5.6--></td>
 				<td style="vertical-align: top;"><br> <!--5.7.1--></td>
 				<td style="vertical-align: top;"><br> <!--5.7.2--></td>
 				<td style="vertical-align: top;"><br> <!--5.7.3--></td>
