--- a/portfolio/portfolio/reqs/requirements2.html
+++ b/portfolio/portfolio/reqs/requirements2.html
@@ -2345,7 +2345,7 @@
 			<tr>
 				<td style="vertical-align: top;">T6.9<br>
 				</td>
-				<td style="vertical-align: top;">
+				<td style="vertical-align: top;">(currentFloor == desiredFloor AND mLevel[*] &nbsp;&larr;&nbsp;False) OR
 					mEmergencyBrake&nbsp;&larr;&nbsp;True&nbsp; OR
 					mHoistwayLimitUp&nbsp;&larr;&nbsp;True&nbsp; OR
 					mHoistwayLimitDown&nbsp;&larr;&nbsp;True&nbsp; <br>
@@ -2354,7 +2354,7 @@
 			<tr>
 				<td style="vertical-align: top;">T6.10<br>
 				</td>
-				<td style="vertical-align: top;">
+				<td style="vertical-align: top;">(currentFloor == desiredFloor AND mLevel[*] &nbsp;&larr;&nbsp;False) OR
 					mEmergencyBrake&nbsp;&larr;&nbsp;True&nbsp; OR
 					mHoistwayLimitUp&nbsp;&larr;&nbsp;True&nbsp; OR
 					mHoistwayLimitDown&nbsp;&larr;&nbsp;True&nbsp; <br>
