--- a/portfolio/portfolio/traceability/req_const_traceability.html
+++ b/portfolio/portfolio/traceability/req_const_traceability.html
@@ -633,7 +633,7 @@
                 </tr>
 					 
 					 <tr>
-                    <td style="vertical-align: top;">6.13.1 Drive.s != STOP AND |DesiredFloor height - mCarLevelPosition| &gt; 1m --&gt; mDrive[s,d]=[FAST,d]<br>
+                    <td style="vertical-align: top;">6.13.1 Drive.s != STOP AND |DesiredFloor height - mCarLevelPosition| &gt; SlowDownDistance --&gt; mDrive[s,d]=[FAST,d]<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
@@ -647,7 +647,7 @@
                     </td>
                 </tr>
 					 <tr>
-                    <td style="vertical-align: top;">6.13.2 Drive.s != STOP AND |DesiredFloor height - mCarLevelPosition| &gt; 1m --&gt; mDriveSpeed[s,d]=[v,d]<br>
+                    <td style="vertical-align: top;">6.13.2 Drive.s != STOP AND |DesiredFloor height - mCarLevelPosition| &gt; SlowDownDistance --&gt; mDriveSpeed[s,d]=[v,d]<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
@@ -661,7 +661,7 @@
                     </td>
                 </tr>
 					 <tr>
-                    <td style="vertical-align: top;">6.14.1 Drive.s != STOP AND |DesiredFloor height - mCarLevelPosition| &lt;= 1m --&gt; mDrive[s,d]=[SLOW,d]<br>
+                    <td style="vertical-align: top;">6.14.1 Drive.s != STOP AND |DesiredFloor height - mCarLevelPosition| &lt;= SlowDownDistance --&gt; mDrive[s,d]=[SLOW,d]<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
@@ -675,7 +675,7 @@
                     </td>
                 </tr>
 					 <tr>
-                    <td style="vertical-align: top;">6.14.2 Drive.s != STOP AND |DesiredFloor height - mCarLevelPosition| &lt;= 1m --&gt; mDriveSpeed[s,d]=[v,d]<br>
+                    <td style="vertical-align: top;">6.14.2 Drive.s != STOP AND |DesiredFloor height - mCarLevelPosition| &lt;= SlowDownDistance --&gt; mDriveSpeed[s,d]=[v,d]<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
