--- a/portfolio/portfolio/traceability/req_const_traceability.html
+++ b/portfolio/portfolio/traceability/req_const_traceability.html
@@ -1124,7 +1124,21 @@ Requirements/Constraints</b></u></td>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">11.19 set mDesiredDwell<br>
+      <td style="vertical-align: top;">11.17 set mDesiredDwell<br>
+      </td>
+      <td style="vertical-align: top;">~<br>
+      </td>
+      <td style="vertical-align: top;">~<br>
+      </td>
+      <td style="vertical-align: top;">X<br>
+      </td>
+      <td style="vertical-align: top;"><br>
+      </td>
+      <td style="vertical-align: top;"><br>
+      </td>
+    </tr>
+	<tr>
+      <td style="vertical-align: top;">11.18 Ignore any calls if commit point reaached<br>
       </td>
       <td style="vertical-align: top;">~<br>
       </td>
