--- a/portfolio/portfolio/traceability/req_const_traceability.html
+++ b/portfolio/portfolio/traceability/req_const_traceability.html
@@ -941,21 +941,7 @@ Requirements/Constraints</b></u></td>
     </tr>
     <tr>
       <td style="vertical-align: top;">11.4 Set mDesiredFloor.f to Target</td>
-      <td style="vertical-align: top;">~<br>
-      </td>
-      <td style="vertical-align: top;">~<br>
-      </td>
-      <td style="vertical-align: top;">~<br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-    </tr>
-    <tr>
-      <td style="vertical-align: top;">11.5 Call->Set mDesiredFloor.d to UP<br>
-      </td>
-      <td style="vertical-align: top;">~<br>
+      <td style="vertical-align: top;">X<br>
       </td>
       <td style="vertical-align: top;">X<br>
       </td>
@@ -967,13 +953,27 @@ Requirements/Constraints</b></u></td>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">11.6 Call->mDesiredFloor.d to DOWN<br>
+      <td style="vertical-align: top;">11.5 More calls higher than Target-->Set mDesiredFloor.d to UP<br>
+      </td>
+      <td style="vertical-align: top;">X<br>
       </td>
       <td style="vertical-align: top;">X<br>
       </td>
       <td style="vertical-align: top;">~<br>
       </td>
+      <td style="vertical-align: top;"><br>
+      </td>
+      <td style="vertical-align: top;"><br>
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;">11.6 More calls lower than Target-->mDesiredFloor.d to DOWN<br>
+      </td>
+      <td style="vertical-align: top;">X<br>
+      </td>
       <td style="vertical-align: top;">~<br>
+      </td>
+      <td style="vertical-align: top;">X<br>
       </td>
       <td style="vertical-align: top;"><br>
       </td>
@@ -981,21 +981,7 @@ Requirements/Constraints</b></u></td>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">11.7 Call->Set mDesiredFloor.f to Target<br>
-      </td>
-      <td style="vertical-align: top;">~<br>
-      </td>
-      <td style="vertical-align: top;">~<br>
-      </td>
-      <td style="vertical-align: top;">~<br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-    </tr>
-    <tr>
-      <td style="vertical-align: top;">11.8 mAtFloor is Target --> Set Target<br>
+      <td style="vertical-align: top;">11.7 When Idle--> Set mDesiredFloor.f to first Target<br>
       </td>
       <td style="vertical-align: top;">X<br>
       </td>
@@ -1009,7 +995,21 @@ Requirements/Constraints</b></u></td>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">11.9 mAtFloor is Target --> Set Target<br>
+      <td style="vertical-align: top;">11.8 mDesiredDirecation was Up--> Set Target to upper floor<br>
+      </td>
+      <td style="vertical-align: top;">X<br>
+      </td>
+      <td style="vertical-align: top;">~<br>
+      </td>
+      <td style="vertical-align: top;">~<br>
+      </td>
+      <td style="vertical-align: top;"><br>
+      </td>
+      <td style="vertical-align: top;"><br>
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;">11.9 mDesiredDirecation was Down--> Set Target to lower floor<br>
       </td>
       <td style="vertical-align: top;">X<br>
       </td>
@@ -1024,7 +1024,7 @@ Requirements/Constraints</b></u></td>
     </tr>
     <tr>
       <td style="vertical-align: top;">11.10 Target lower --> set 
-      Target<br>
+      Target to closest<br>
       </td>
       <td style="vertical-align: top;">X<br>
       </td>
@@ -1039,7 +1039,7 @@ Requirements/Constraints</b></u></td>
     </tr>
     <tr>
       <td style="vertical-align: top;">11.11 Target higher --> set 
-      Target<br>
+      Target to closest<br>
       </td>
       <td style="vertical-align: top;">X<br>
       </td>
@@ -1056,6 +1056,62 @@ Requirements/Constraints</b></u></td>
       <td style="vertical-align: top;">11.12 no Call --> set 
       mDesiredFloor.d to STOP<br>
       </td>
+      <td style="vertical-align: top;">X<br>
+      </td>
+      <td style="vertical-align: top;">~<br>
+      </td>
+      <td style="vertical-align: top;">~<br>
+      </td>
+      <td style="vertical-align: top;"><br>
+      </td>
+      <td style="vertical-align: top;"><br>
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;">11.13 More calls in same direction-->set same mDesiredFloor.d<br>
+      </td>
+      <td style="vertical-align: top;">X<br>
+      </td>
+      <td style="vertical-align: top;">~<br>
+      </td>
+      <td style="vertical-align: top;">~<br>
+      </td>
+      <td style="vertical-align: top;"><br>
+      </td>
+      <td style="vertical-align: top;"><br>
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;">11.14 No more calls in same direction-->set mDesiredFloor.f to furthest<br>
+      </td>
+      <td style="vertical-align: top;">X<br>
+      </td>
+      <td style="vertical-align: top;">~<br>
+      </td>
+      <td style="vertical-align: top;">~<br>
+      </td>
+      <td style="vertical-align: top;"><br>
+      </td>
+      <td style="vertical-align: top;"><br>
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;">11.15 No further call-->change mDesiredFloor.d<br>
+      </td>
+      <td style="vertical-align: top;">X<br>
+      </td>
+      <td style="vertical-align: top;">~<br>
+      </td>
+      <td style="vertical-align: top;">~<br>
+      </td>
+      <td style="vertical-align: top;"><br>
+      </td>
+      <td style="vertical-align: top;"><br>
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;">11.16 set mDesiredFloor.b accordingly<br>
+      </td>
       <td style="vertical-align: top;">~<br>
       </td>
       <td style="vertical-align: top;">~<br>
@@ -1068,25 +1124,11 @@ Requirements/Constraints</b></u></td>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">11.13 set mDesiredFloor.d<br>
+      <td style="vertical-align: top;">11.17 set mDesiredFloor.b<br>
       </td>
       <td style="vertical-align: top;">~<br>
       </td>
-      <td style="vertical-align: top;">X<br>
-      </td>
       <td style="vertical-align: top;">~<br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-    </tr>
-    <tr>
-      <td style="vertical-align: top;">11.14 set mDesiredFloor.d<br>
-      </td>
-      <td style="vertical-align: top;">~<br>
-      </td>
-      <td style="vertical-align: top;">X<br>
       </td>
       <td style="vertical-align: top;">~<br>
       </td>
@@ -1096,41 +1138,13 @@ Requirements/Constraints</b></u></td>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">11.15 change mDesiredFloor.d<br>
-      </td>
-      <td style="vertical-align: top;">~<br>
-      </td>
-      <td style="vertical-align: top;">X<br>
-      </td>
-      <td style="vertical-align: top;">~<br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-    </tr>
-    <tr>
-      <td style="vertical-align: top;">11.16 set mDesiredFloor.b<br>
+      <td style="vertical-align: top;">11.18 set constant mDesiredDwell<br>
       </td>
       <td style="vertical-align: top;">~<br>
       </td>
       <td style="vertical-align: top;">~<br>
       </td>
-      <td style="vertical-align: top;">X<br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-    </tr>
-    <tr>
-      <td style="vertical-align: top;">11.19 set mDesiredDwell<br>
-      </td>
       <td style="vertical-align: top;">~<br>
-      </td>
-      <td style="vertical-align: top;">~<br>
-      </td>
-      <td style="vertical-align: top;">X<br>
       </td>
       <td style="vertical-align: top;"><br>
       </td>
