--- a/portfolio/portfolio/portfolio.html
+++ b/portfolio/portfolio/portfolio.html
@@ -82,7 +82,7 @@
 			<li><a href="acceptance_test/acceptance_test_log.html">Acceptance
 					Test Log</a> - Keep record on acceptance test</li>
 			<li><a href="fault_tolerance/fault_tolerance_test_log.html">Fault
-					Tolerance Test Log</a> - &lt;description here&gt;</li>
+					Tolerance Test Log</a> - Keep record on fault tolerance test;</li>
 		</ul>
 		<li>Log Files</li>
 		<ul>
@@ -102,9 +102,8 @@
 		<li>Fault Tolerance</li>
 		<ul>
 			<li><a href="fault_tolerance/fmea.html">FMEA</a> -
-				&lt;description here&gt;</li>
-			<li><a href="fault_tolerance/fta.html">FTA</a> - &lt;description
-				here&gt;<br></li>
+				Fault Modes and Effects Analysis;</li>
+			<li><a href="fault_tolerance/fta.html">FTA</a> - Fault Tree Analysis;<br></li>
 		</ul>
 		<li>Verification</li>
 		<ul>
