--- a/portfolio/portfolio/architecture/usecases.html
+++ b/portfolio/portfolio/architecture/usecases.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 <h1 style="text-align: center;"> 18-649 Use Case Diagram</h1>
-<hr style="width: 100%; height: 2px;">18649 &lt;semester&gt;<br>
-Group x - Student names and andrewIds
+<hr style="width: 100%; height: 2px;">18649 &lt;Fall 2013&gt;<br>
+        Group 17 - Qiang Zhang(qiangz), Shen Yu(sheny), Jiang He(jiangh), Xianle Wang(xianlew)<br>
 <hr style="width: 100%; height: 2px;"><a href="usecases.gif"><img
  alt="Use Case Diagram" src="usecases.gif"
  style="border: 0px solid ; width: 800px; height: 843px;"></a><br>
