--- a/portfolio/portfolio/fault_tolerance/fault_tolerance_test_log.html
+++ b/portfolio/portfolio/fault_tolerance/fault_tolerance_test_log.html
@@ -36,79 +36,173 @@ include all information listed in the project handouts.<span
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;"><a href="fault1.fault">fault1.fault</a><br>
+      <td style="vertical-align: top;"><a href="group17fault.fault">group17fault.fault</a><br>
       </td>
-      <td style="vertical-align: top;">A permanent failed HallCall
-button at 1 FRONT UP.<br>
+      <td style="vertical-align: top;">Drop 50% messages<br>
       </td>
-      <td style="vertical-align: top;"><a href="proj5acceptance1.pass">proj5acceptance1.pass</a><br>
+      <td style="vertical-align: top;"><a href="proj7acceptance1.pass">proj7acceptance1.pass</a><br>
       </td>
-      <td style="vertical-align: top;">pass / fail </td>
-      <td style="vertical-align: top;"><a
- href="elevator-proj5acceptance1.stats"><span
- style="text-decoration: underline;">elevator-proj5acceptance1.stats</span></a><br>
+      <td style="vertical-align: top;">pass</td>
+      <td style="vertical-align: top;"><a href="proj7acceptance1.stats"><span
+ style="text-decoration: underline;">proj7acceptance1.stats</span></a><br>
       </td>
-      <td style="vertical-align: top;">I If the test failed, a <strong>specific</strong>
-pinpointing of
-the failure: the fault file, the test file, the code, or the
-design.&nbsp; This must also be recorded
-in your issue log. </td>
+      <td style="vertical-align: top;"></td>
     </tr>
     <tr>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;"><a href="group17fault.fault">group17fault.fault</a><br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">Drop 50% messages<br>
       </td>
-      <td style="vertical-align: top;">...<br>
+      <td style="vertical-align: top;"><a href="proj7acceptance2.pass">proj7acceptance2.pass</a><br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">pass</td>
+      <td style="vertical-align: top;"><a href="proj7acceptance2.stats"><span
+ style="text-decoration: underline;">proj7acceptance2.stats</span></a><br>
       </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
+      <td style="vertical-align: top;"></td>
     </tr>
     <tr>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;"><a href="group17fault.fault">group17fault.fault</a><br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">Drop 50% messages<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;"><a href="proj7acceptance3.pass">proj7acceptance3.pass</a><br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">pass</td>
+      <td style="vertical-align: top;"><a href="proj7acceptance3.stats"><span
+ style="text-decoration: underline;">proj7acceptance3.stats</span></a><br>
       </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
+      <td style="vertical-align: top;"></td>
     </tr>
     <tr>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;"><a href="group17fault.fault">group17fault.fault</a><br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">Drop 50% messages<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;"><a href="proj8group17acceptance1.pass">proj8group17acceptance1.pass</a><br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">pass</td>
+      <td style="vertical-align: top;"><a href="proj8group17acceptance1.stats"><span
+ style="text-decoration: underline;">proj8group17acceptance1.stats</span></a><br>
       </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
+      <td style="vertical-align: top;"></td>
     </tr>
     <tr>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;"><a href="group17fault.fault">group17fault.fault</a><br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">Drop 50% messages<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;"><a href="proj10acceptance1.pass">proj10acceptance1.pass</a><br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">pass</td>
+      <td style="vertical-align: top;"><a href="proj10acceptance1.stats"><span
+ style="text-decoration: underline;">proj10acceptance1.stats</span></a><br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;"></td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;"><a href="group17fault.fault">group17fault.fault</a><br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">Drop 50% messages<br>
       </td>
+      <td style="vertical-align: top;"><a href="proj10acceptance2.pass">proj10acceptance2.pass</a><br>
+      </td>
+      <td style="vertical-align: top;">pass</td>
+      <td style="vertical-align: top;"><a href="proj10acceptance2.stats"><span
+ style="text-decoration: underline;">proj10acceptance2.stats</span></a><br>
+      </td>
+      <td style="vertical-align: top;"></td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;"><a href="group17fault.fault">group17fault.fault</a><br>
+      </td>
+      <td style="vertical-align: top;">Drop 50% messages<br>
+      </td>
+      <td style="vertical-align: top;"><a href="proj10acceptance3.pass">proj10acceptance3.pass</a><br>
+      </td>
+      <td style="vertical-align: top;">pass</td>
+      <td style="vertical-align: top;"><a href="proj10acceptance3.stats"><span
+ style="text-decoration: underline;">proj10acceptance3.stats</span></a><br>
+      </td>
+      <td style="vertical-align: top;"></td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;"><a href="group17fault.fault">group17fault.fault</a><br>
+      </td>
+      <td style="vertical-align: top;">Drop 50% messages<br>
+      </td>
+      <td style="vertical-align: top;"><a href="proj11acceptance1.pass">proj11acceptance1.pass</a><br>
+      </td>
+      <td style="vertical-align: top;">pass</td>
+      <td style="vertical-align: top;"><a href="proj11acceptance1.stats"><span
+ style="text-decoration: underline;">proj11acceptance1.stats</span></a><br>
+      </td>
+      <td style="vertical-align: top;"></td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;"><a href="group17fault.fault">group17fault.fault</a><br>
+      </td>
+      <td style="vertical-align: top;">Drop 50% messages<br>
+      </td>
+      <td style="vertical-align: top;"><a href="proj11acceptance2.pass">proj11acceptance2.pass</a><br>
+      </td>
+      <td style="vertical-align: top;">pass</td>
+      <td style="vertical-align: top;"><a href="proj11acceptance2.stats"><span
+ style="text-decoration: underline;">proj11acceptance2.stats</span></a><br>
+      </td>
+      <td style="vertical-align: top;"></td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;"><a href="group17fault.fault">group17fault.fault</a><br>
+      </td>
+      <td style="vertical-align: top;">Drop 50% messages<br>
+      </td>
+      <td style="vertical-align: top;"><a href="proj11acceptance3.pass">proj11acceptance3.pass</a><br>
+      </td>
+      <td style="vertical-align: top;">pass</td>
+      <td style="vertical-align: top;"><a href="proj11acceptance3.stats"><span
+ style="text-decoration: underline;">proj11acceptance3.stats</span></a><br>
+      </td>
+      <td style="vertical-align: top;"></td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;"><a href="group17fault.fault">group17fault.fault</a><br>
+      </td>
+      <td style="vertical-align: top;">Drop 50% messages<br>
+      </td>
+      <td style="vertical-align: top;"><a href="uppeak_final.pass">uppeak_final.pass</a><br>
+      </td>
+      <td style="vertical-align: top;">pass</td>
+      <td style="vertical-align: top;"><a href="uppeak_final.stats"><span
+ style="text-decoration: underline;">uppeak_final.stats</span></a><br>
+      </td>
+      <td style="vertical-align: top;"></td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;"><a href="group17fault.fault">group17fault.fault</a><br>
+      </td>
+      <td style="vertical-align: top;">Drop 50% messages<br>
+      </td>
+      <td style="vertical-align: top;"><a href="downpeak_final.pass">downpeak_final.pass</a><br>
+      </td>
+      <td style="vertical-align: top;">pass</td>
+      <td style="vertical-align: top;"><a href="downpeak_final.stats"><span
+ style="text-decoration: underline;">downpeak_final.stats</span></a><br>
+      </td>
+      <td style="vertical-align: top;"></td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;"><a href="group17fault.fault">group17fault.fault</a><br>
+      </td>
+      <td style="vertical-align: top;">Drop 50% messages<br>
+      </td>
+      <td style="vertical-align: top;"><a href="normal_final.pass">normal_final.pass</a><br>
+      </td>
+      <td style="vertical-align: top;">pass</td>
+      <td style="vertical-align: top;"><a href="normal_final.stats"><span
+ style="text-decoration: underline;">normal_final.stats</span></a><br>
+      </td>
+      <td style="vertical-align: top;"></td>
     </tr>
   </tbody>
 </table>
