--- a/portfolio/portfolio/architecture/architecture.html
+++ b/portfolio/portfolio/architecture/architecture.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <h1 style="text-align: center;"> 18-649 - Architecture Diagram</h1>
-<hr style="width: 100%; height: 2px;">18649 &lt;Fall 2013&gt;<br>
-        Group 17 - Qiang Zhang(qiangz), Shen Yu(sheny), Jiang He(jiangh), Xianle Wang(xianlew)<br>
+<hr style="width: 100%; height: 2px;">18649 &lt;semester&gt;<br>
+Group x - Student names and andrewIds
 <hr style="width: 100%; height: 2px;">You can also download a <a
  href="architecture_diagram.pdf">PDF version</a>.<br>
 <a href="architecture_diagram.jpg"><img alt="class diagram"
