--- a/portfolio/portfolio/fault_tolerance/fta.html
+++ b/portfolio/portfolio/fault_tolerance/fta.html
@@ -7,8 +7,8 @@
 <body>
 <h1 style="text-align: center;">18649 - Fault Tree Analysis<br>
 </h1>
-<hr style="width: 100%; height: 2px;">18649 &lt;Fall 2013&gt;<br>
-        Group 17 - Qiang Zhang(qiangz), Shen Yu(sheny), Jiang He(jiangh), Xianle Wang(xianlew)<br>
+<hr style="width: 100%; height: 2px;">18649 &lt;semester&gt;<br>
+Group x - Student names and andrewIds<br>
 <hr style="width: 100%; height: 2px;">
 <h2>FTA Analysis</h2>
 Add your fault tree analysis here<br>
