--- a/portfolio/portfolio/traceability/req_const_traceability.html
+++ b/portfolio/portfolio/traceability/req_const_traceability.html
@@ -139,6 +139,21 @@
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
+                </tr>
+					 <tr>
+                    <td style="vertical-align: top;">5.7.4 At floor f and stop --&gt; Reversal set to true <br>
+                    </td>
+                    <td style="vertical-align: top;">~<br>
+                    </td>
+                    <td style="vertical-align: top;">~<br>
+                    </td>
+                    <td style="vertical-align: top;">~<br>
+                    </td>
+                    <td style="vertical-align: top;">~<br>
+                    </td>
+                    <td style="vertical-align: top;">~<br>
+                    </td>
+                </tr>
                 <tr>
                     <td style="vertical-align: top;">5.8.1 Door opened --&gt; door stop moving <br>
                     </td>
@@ -336,7 +351,21 @@
                     <td style="vertical-align: top;">~<br>
                     </td>
                 </tr>
-				<tr>
+					 <tr>
+                    <td style="vertical-align: top;">5.12.4 door reversal triggered --&gt; DoorReversal set to true <br>
+                    </td>
+                    <td style="vertical-align: top;">~<br>
+                    </td>
+                    <td style="vertical-align: top;">~<br>
+                    </td>
+                    <td style="vertical-align: top;">~<br>
+                    </td>
+                    <td style="vertical-align: top;">~<br>
+                    </td>
+                    <td style="vertical-align: top;">~<br>
+                    </td>
+                </tr>
+					 <tr>
                     <td style="vertical-align: top;">5.13.1 countdown &lt; 0 AND Reversal is true --&gt; door nudge <br>
                     </td>
                     <td style="vertical-align: top;">~<br>
@@ -444,13 +473,13 @@
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
-                    <td style="vertical-align: top;">X<br>
+                    <td style="vertical-align: top;">~<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
                 </tr>
 					 <tr>
-                    <td style="vertical-align: top;">6.7.2 mHoistwayLimit is true --> mDriveSpeed Stop<br>
+                    <td style="vertical-align: top;">6.7.2 mHoistwayLimit is true--> mDriveSpeed Stop<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
@@ -458,7 +487,7 @@
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
-                    <td style="vertical-align: top;">X<br>
+                    <td style="vertical-align: top;">~<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
@@ -472,7 +501,7 @@
 						 </td>
 						 <td style="vertical-align: top;">~<br>
 						 </td>
-						 <td style="vertical-align: top;">X<br>
+						 <td style="vertical-align: top;">~<br>
 						 </td>
 						 <td style="vertical-align: top;">~<br>
 						 </td>
@@ -481,13 +510,13 @@
                 </tr>
                 <tr>
                     <td style="vertical-align: top;">6.8.2 At Floor f and mLevel is False and mDoorClosed is False -->
-						  mDriveSpeed[s,d]=[v,d]<br>
+						  mDriveSpeed[s,d]=[0,d]<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
-                    <td style="vertical-align: top;">X<br>
+                    <td style="vertical-align: top;">~<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
@@ -499,9 +528,9 @@
                     <td style="vertical-align: top;">6.9.1 At Floor f and mLevel is True --> 
 						  Drive Stop<br>
                     </td>
-                    <td style="vertical-align: top;">X<br>
+                    <td style="vertical-align: top;">~<br>
                     </td>
-                    <td style="vertical-align: top;">X<br>
+                    <td style="vertical-align: top;">~<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
@@ -514,9 +543,9 @@
                     <td style="vertical-align: top;">6.9.2 At Floor f and mLevel is True --> 
 						  mDriveSpeed Stop<br>
                     </td>
-                    <td style="vertical-align: top;">X<br>
+                    <td style="vertical-align: top;">~<br>
                     </td>
-                    <td style="vertical-align: top;">X<br>
+                    <td style="vertical-align: top;">~<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
@@ -534,7 +563,7 @@
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
-                    <td style="vertical-align: top;">X<br>
+                    <td style="vertical-align: top;">~<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
@@ -549,7 +578,7 @@
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
-                    <td style="vertical-align: top;">X<br>
+                    <td style="vertical-align: top;">~<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
@@ -565,7 +594,7 @@
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
-                    <td style="vertical-align: top;">X<br>
+                    <td style="vertical-align: top;">~<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
@@ -580,7 +609,7 @@
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
-                    <td style="vertical-align: top;">X<br>
+                    <td style="vertical-align: top;">~<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
@@ -604,27 +633,13 @@
                 </tr>
 					 
 					 <tr>
-                    <td style="vertical-align: top;">6.13.1 Drive.s != STOP AND |DesiredFloor height - mCarLevelPosition| &gt; SlowDownDistance --&gt; mDrive[s,d]=[FAST,d]<br>
+                    <td style="vertical-align: top;">6.13.1 Drive.s != STOP AND |DesiredFloor height - mCarLevelPosition| &gt; 1m --&gt; mDrive[s,d]=[FAST,d]<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
-                    <td style="vertical-align: top;">X<br>
-                    </td>
                     <td style="vertical-align: top;">~<br>
-                    </td>
-                    <td style="vertical-align: top;">~<br>
-                    </td>
-                </tr>
-					 <tr>
-                    <td style="vertical-align: top;">6.13.2 Drive.s != STOP AND |DesiredFloor height - mCarLevelPosition| &gt; SlowDownDistance --&gt; mDriveSpeed[s,d]=[v,d]<br>
-                    </td>
-                    <td style="vertical-align: top;">~<br>
-                    </td>
-                    <td style="vertical-align: top;">~<br>
-                    </td>
-                    <td style="vertical-align: top;">X<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
@@ -632,13 +647,13 @@
                     </td>
                 </tr>
 					 <tr>
-                    <td style="vertical-align: top;">6.14.1 Drive.s != STOP AND |DesiredFloor height - mCarLevelPosition| &lt;= SlowDownDistance --&gt; mDrive[s,d]=[SLOW,d]<br>
+                    <td style="vertical-align: top;">6.13.2 Drive.s != STOP AND |DesiredFloor height - mCarLevelPosition| &gt; 1m --&gt; mDriveSpeed[s,d]=[v,d]<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
-                    <td style="vertical-align: top;">X<br>
+                    <td style="vertical-align: top;">~<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
@@ -646,13 +661,27 @@
                     </td>
                 </tr>
 					 <tr>
-                    <td style="vertical-align: top;">6.14.2 Drive.s != STOP AND |DesiredFloor height - mCarLevelPosition| &lt;= SlowDownDistance --&gt; mDriveSpeed[s,d]=[v,d]<br>
+                    <td style="vertical-align: top;">6.14.1 Drive.s != STOP AND |DesiredFloor height - mCarLevelPosition| &lt;= 1m --&gt; mDrive[s,d]=[SLOW,d]<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
-                    <td style="vertical-align: top;">X<br>
+                    <td style="vertical-align: top;">~<br>
+                    </td>
+                    <td style="vertical-align: top;">~<br>
+                    </td>
+                    <td style="vertical-align: top;">~<br>
+                    </td>
+                </tr>
+					 <tr>
+                    <td style="vertical-align: top;">6.14.2 Drive.s != STOP AND |DesiredFloor height - mCarLevelPosition| &lt;= 1m --&gt; mDriveSpeed[s,d]=[v,d]<br>
+                    </td>
+                    <td style="vertical-align: top;">~<br>
+                    </td>
+                    <td style="vertical-align: top;">~<br>
+                    </td>
+                    <td style="vertical-align: top;">~<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
@@ -912,23 +941,9 @@ Requirements/Constraints</b></u></td>
     </tr>
     <tr>
       <td style="vertical-align: top;">11.4 Set mDesiredFloor.f to Target</td>
-      <td style="vertical-align: top;">X<br>
+      <td style="vertical-align: top;">~<br>
       </td>
-      <td style="vertical-align: top;">X<br>
-      </td>
-      <td style="vertical-align: top;">X<br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-    </tr>
-    <tr>
-      <td style="vertical-align: top;">11.5 More calls higher than Target-->Set mDesiredFloor.d to UP<br>
-      </td>
-      <td style="vertical-align: top;">X<br>
-      </td>
-      <td style="vertical-align: top;">X<br>
+      <td style="vertical-align: top;">~<br>
       </td>
       <td style="vertical-align: top;">~<br>
       </td>
@@ -938,11 +953,11 @@ Requirements/Constraints</b></u></td>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">11.6 More calls lower than Target-->mDesiredFloor.d to DOWN<br>
-      </td>
-      <td style="vertical-align: top;">X<br>
+      <td style="vertical-align: top;">11.5 Call->Set mDesiredFloor.d to UP<br>
       </td>
       <td style="vertical-align: top;">~<br>
+      </td>
+      <td style="vertical-align: top;">X<br>
       </td>
       <td style="vertical-align: top;">X<br>
       </td>
@@ -952,7 +967,7 @@ Requirements/Constraints</b></u></td>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">11.7 When Idle--> Set mDesiredFloor.f to first Target<br>
+      <td style="vertical-align: top;">11.6 Call->mDesiredFloor.d to DOWN<br>
       </td>
       <td style="vertical-align: top;">X<br>
       </td>
@@ -966,7 +981,21 @@ Requirements/Constraints</b></u></td>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">11.8 mDesiredDirecation was Up--> Set Target to upper floor<br>
+      <td style="vertical-align: top;">11.7 Call->Set mDesiredFloor.f to Target<br>
+      </td>
+      <td style="vertical-align: top;">~<br>
+      </td>
+      <td style="vertical-align: top;">~<br>
+      </td>
+      <td style="vertical-align: top;">~<br>
+      </td>
+      <td style="vertical-align: top;"><br>
+      </td>
+      <td style="vertical-align: top;"><br>
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;">11.8 mAtFloor is Target --> Set Target<br>
       </td>
       <td style="vertical-align: top;">X<br>
       </td>
@@ -980,7 +1009,7 @@ Requirements/Constraints</b></u></td>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">11.9 mDesiredDirecation was Down--> Set Target to lower floor<br>
+      <td style="vertical-align: top;">11.9 mAtFloor is Target --> Set Target<br>
       </td>
       <td style="vertical-align: top;">X<br>
       </td>
@@ -995,7 +1024,7 @@ Requirements/Constraints</b></u></td>
     </tr>
     <tr>
       <td style="vertical-align: top;">11.10 Target lower --> set 
-      Target to closest<br>
+      Target<br>
       </td>
       <td style="vertical-align: top;">X<br>
       </td>
@@ -1010,7 +1039,7 @@ Requirements/Constraints</b></u></td>
     </tr>
     <tr>
       <td style="vertical-align: top;">11.11 Target higher --> set 
-      Target to closest<br>
+      Target<br>
       </td>
       <td style="vertical-align: top;">X<br>
       </td>
@@ -1027,21 +1056,7 @@ Requirements/Constraints</b></u></td>
       <td style="vertical-align: top;">11.12 no Call --> set 
       mDesiredFloor.d to STOP<br>
       </td>
-      <td style="vertical-align: top;">X<br>
-      </td>
       <td style="vertical-align: top;">~<br>
-      </td>
-      <td style="vertical-align: top;">~<br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-    </tr>
-    <tr>
-      <td style="vertical-align: top;">11.13 More calls in same direction-->set same mDesiredFloor.d<br>
-      </td>
-      <td style="vertical-align: top;">X<br>
       </td>
       <td style="vertical-align: top;">~<br>
       </td>
@@ -1053,39 +1068,39 @@ Requirements/Constraints</b></u></td>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">11.14 No more calls in same direction-->set mDesiredFloor.f to furthest<br>
+      <td style="vertical-align: top;">11.13 set mDesiredFloor.d<br>
+      </td>
+      <td style="vertical-align: top;">~<br>
       </td>
       <td style="vertical-align: top;">X<br>
       </td>
       <td style="vertical-align: top;">~<br>
       </td>
-      <td style="vertical-align: top;">~<br>
-      </td>
       <td style="vertical-align: top;"><br>
       </td>
       <td style="vertical-align: top;"><br>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">11.15 No further call-->change mDesiredFloor.d<br>
+      <td style="vertical-align: top;">11.14 set mDesiredFloor.d<br>
+      </td>
+      <td style="vertical-align: top;">~<br>
       </td>
       <td style="vertical-align: top;">X<br>
       </td>
       <td style="vertical-align: top;">~<br>
       </td>
-      <td style="vertical-align: top;">~<br>
-      </td>
       <td style="vertical-align: top;"><br>
       </td>
       <td style="vertical-align: top;"><br>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">11.16 set mDesiredFloor.b accordingly<br>
+      <td style="vertical-align: top;">11.15 change mDesiredFloor.d<br>
       </td>
       <td style="vertical-align: top;">~<br>
       </td>
-      <td style="vertical-align: top;">~<br>
+      <td style="vertical-align: top;">X<br>
       </td>
       <td style="vertical-align: top;">~<br>
       </td>
@@ -1095,27 +1110,27 @@ Requirements/Constraints</b></u></td>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">11.17 set constant mDesiredDwell<br>
+      <td style="vertical-align: top;">11.16 set mDesiredFloor.b<br>
       </td>
       <td style="vertical-align: top;">~<br>
       </td>
       <td style="vertical-align: top;">~<br>
       </td>
-      <td style="vertical-align: top;">~<br>
+      <td style="vertical-align: top;">X<br>
       </td>
       <td style="vertical-align: top;"><br>
       </td>
       <td style="vertical-align: top;"><br>
       </td>
     </tr>
-	<tr>
-      <td style="vertical-align: top;">11.18 Ignore any calls if commit point reaached<br>
+    <tr>
+      <td style="vertical-align: top;">11.19 set mDesiredDwell<br>
       </td>
       <td style="vertical-align: top;">~<br>
       </td>
       <td style="vertical-align: top;">~<br>
       </td>
-      <td style="vertical-align: top;">~<br>
+      <td style="vertical-align: top;">X<br>
       </td>
       <td style="vertical-align: top;"><br>
       </td>
