--- a/portfolio/portfolio/traceability/req_const_traceability.html
+++ b/portfolio/portfolio/traceability/req_const_traceability.html
@@ -139,21 +139,6 @@
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
-                </tr>
-					 <tr>
-                    <td style="vertical-align: top;">5.7.4 At floor f and stop --&gt; Reversal set to true <br>
-                    </td>
-                    <td style="vertical-align: top;">~<br>
-                    </td>
-                    <td style="vertical-align: top;">~<br>
-                    </td>
-                    <td style="vertical-align: top;">~<br>
-                    </td>
-                    <td style="vertical-align: top;">~<br>
-                    </td>
-                    <td style="vertical-align: top;">~<br>
-                    </td>
-                </tr>
                 <tr>
                     <td style="vertical-align: top;">5.8.1 Door opened --&gt; door stop moving <br>
                     </td>
@@ -351,21 +336,7 @@
                     <td style="vertical-align: top;">~<br>
                     </td>
                 </tr>
-					 <tr>
-                    <td style="vertical-align: top;">5.12.4 door reversal triggered --&gt; DoorReversal set to true <br>
-                    </td>
-                    <td style="vertical-align: top;">~<br>
-                    </td>
-                    <td style="vertical-align: top;">~<br>
-                    </td>
-                    <td style="vertical-align: top;">~<br>
-                    </td>
-                    <td style="vertical-align: top;">~<br>
-                    </td>
-                    <td style="vertical-align: top;">~<br>
-                    </td>
-                </tr>
-					 <tr>
+				<tr>
                     <td style="vertical-align: top;">5.13.1 countdown &lt; 0 AND Reversal is true --&gt; door nudge <br>
                     </td>
                     <td style="vertical-align: top;">~<br>
@@ -473,13 +444,13 @@
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
-                    <td style="vertical-align: top;">~<br>
+                    <td style="vertical-align: top;">X<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
                 </tr>
 					 <tr>
-                    <td style="vertical-align: top;">6.7.2 mHoistwayLimit is true--> mDriveSpeed Stop<br>
+                    <td style="vertical-align: top;">6.7.2 mHoistwayLimit is true --> mDriveSpeed Stop<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
@@ -487,7 +458,7 @@
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
-                    <td style="vertical-align: top;">~<br>
+                    <td style="vertical-align: top;">X<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
@@ -501,7 +472,7 @@
 						 </td>
 						 <td style="vertical-align: top;">~<br>
 						 </td>
-						 <td style="vertical-align: top;">~<br>
+						 <td style="vertical-align: top;">X<br>
 						 </td>
 						 <td style="vertical-align: top;">~<br>
 						 </td>
@@ -510,13 +481,13 @@
                 </tr>
                 <tr>
                     <td style="vertical-align: top;">6.8.2 At Floor f and mLevel is False and mDoorClosed is False -->
-						  mDriveSpeed[s,d]=[0,d]<br>
+						  mDriveSpeed[s,d]=[v,d]<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
-                    <td style="vertical-align: top;">~<br>
+                    <td style="vertical-align: top;">X<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
@@ -528,9 +499,9 @@
                     <td style="vertical-align: top;">6.9.1 At Floor f and mLevel is True --> 
 						  Drive Stop<br>
                     </td>
-                    <td style="vertical-align: top;">~<br>
+                    <td style="vertical-align: top;">X<br>
                     </td>
-                    <td style="vertical-align: top;">~<br>
+                    <td style="vertical-align: top;">X<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
@@ -543,9 +514,9 @@
                     <td style="vertical-align: top;">6.9.2 At Floor f and mLevel is True --> 
 						  mDriveSpeed Stop<br>
                     </td>
-                    <td style="vertical-align: top;">~<br>
+                    <td style="vertical-align: top;">X<br>
                     </td>
-                    <td style="vertical-align: top;">~<br>
+                    <td style="vertical-align: top;">X<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
@@ -563,7 +534,7 @@
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
-                    <td style="vertical-align: top;">~<br>
+                    <td style="vertical-align: top;">X<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
@@ -578,7 +549,7 @@
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
-                    <td style="vertical-align: top;">~<br>
+                    <td style="vertical-align: top;">X<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
@@ -594,7 +565,7 @@
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
-                    <td style="vertical-align: top;">~<br>
+                    <td style="vertical-align: top;">X<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
@@ -609,7 +580,7 @@
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
-                    <td style="vertical-align: top;">~<br>
+                    <td style="vertical-align: top;">X<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
@@ -633,27 +604,13 @@
                 </tr>
 					 
 					 <tr>
-                    <td style="vertical-align: top;">6.13.1 Drive.s != STOP AND |DesiredFloor height - mCarLevelPosition| &gt; 1m --&gt; mDrive[s,d]=[FAST,d]<br>
+                    <td style="vertical-align: top;">6.13.1 Drive.s != STOP AND |DesiredFloor height - mCarLevelPosition| &gt; SlowDownDistance --&gt; mDrive[s,d]=[FAST,d]<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
-                    <td style="vertical-align: top;">~<br>
-                    </td>
-                    <td style="vertical-align: top;">~<br>
-                    </td>
-                    <td style="vertical-align: top;">~<br>
-                    </td>
-                </tr>
-					 <tr>
-                    <td style="vertical-align: top;">6.13.2 Drive.s != STOP AND |DesiredFloor height - mCarLevelPosition| &gt; 1m --&gt; mDriveSpeed[s,d]=[v,d]<br>
-                    </td>
-                    <td style="vertical-align: top;">~<br>
-                    </td>
-                    <td style="vertical-align: top;">~<br>
-                    </td>
-                    <td style="vertical-align: top;">~<br>
+                    <td style="vertical-align: top;">X<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
@@ -661,13 +618,13 @@
                     </td>
                 </tr>
 					 <tr>
-                    <td style="vertical-align: top;">6.14.1 Drive.s != STOP AND |DesiredFloor height - mCarLevelPosition| &lt;= 1m --&gt; mDrive[s,d]=[SLOW,d]<br>
+                    <td style="vertical-align: top;">6.13.2 Drive.s != STOP AND |DesiredFloor height - mCarLevelPosition| &gt; SlowDownDistance --&gt; mDriveSpeed[s,d]=[v,d]<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
-                    <td style="vertical-align: top;">~<br>
+                    <td style="vertical-align: top;">X<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
@@ -675,13 +632,27 @@
                     </td>
                 </tr>
 					 <tr>
-                    <td style="vertical-align: top;">6.14.2 Drive.s != STOP AND |DesiredFloor height - mCarLevelPosition| &lt;= 1m --&gt; mDriveSpeed[s,d]=[v,d]<br>
+                    <td style="vertical-align: top;">6.14.1 Drive.s != STOP AND |DesiredFloor height - mCarLevelPosition| &lt;= SlowDownDistance --&gt; mDrive[s,d]=[SLOW,d]<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
+                    <td style="vertical-align: top;">X<br>
+                    </td>
                     <td style="vertical-align: top;">~<br>
+                    </td>
+                    <td style="vertical-align: top;">~<br>
+                    </td>
+                </tr>
+					 <tr>
+                    <td style="vertical-align: top;">6.14.2 Drive.s != STOP AND |DesiredFloor height - mCarLevelPosition| &lt;= SlowDownDistance --&gt; mDriveSpeed[s,d]=[v,d]<br>
+                    </td>
+                    <td style="vertical-align: top;">~<br>
+                    </td>
+                    <td style="vertical-align: top;">~<br>
+                    </td>
+                    <td style="vertical-align: top;">X<br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
@@ -941,21 +912,7 @@ Requirements/Constraints</b></u></td>
     </tr>
     <tr>
       <td style="vertical-align: top;">11.4 Set mDesiredFloor.f to Target</td>
-      <td style="vertical-align: top;">~<br>
-      </td>
-      <td style="vertical-align: top;">~<br>
-      </td>
-      <td style="vertical-align: top;">~<br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-    </tr>
-    <tr>
-      <td style="vertical-align: top;">11.5 Call->Set mDesiredFloor.d to UP<br>
-      </td>
-      <td style="vertical-align: top;">~<br>
+      <td style="vertical-align: top;">X<br>
       </td>
       <td style="vertical-align: top;">X<br>
       </td>
@@ -967,13 +924,27 @@ Requirements/Constraints</b></u></td>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">11.6 Call->mDesiredFloor.d to DOWN<br>
+      <td style="vertical-align: top;">11.5 More calls higher than Target-->Set mDesiredFloor.d to UP<br>
+      </td>
+      <td style="vertical-align: top;">X<br>
       </td>
       <td style="vertical-align: top;">X<br>
       </td>
       <td style="vertical-align: top;">~<br>
       </td>
+      <td style="vertical-align: top;"><br>
+      </td>
+      <td style="vertical-align: top;"><br>
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;">11.6 More calls lower than Target-->mDesiredFloor.d to DOWN<br>
+      </td>
+      <td style="vertical-align: top;">X<br>
+      </td>
       <td style="vertical-align: top;">~<br>
+      </td>
+      <td style="vertical-align: top;">X<br>
       </td>
       <td style="vertical-align: top;"><br>
       </td>
@@ -981,21 +952,7 @@ Requirements/Constraints</b></u></td>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">11.7 Call->Set mDesiredFloor.f to Target<br>
-      </td>
-      <td style="vertical-align: top;">~<br>
-      </td>
-      <td style="vertical-align: top;">~<br>
-      </td>
-      <td style="vertical-align: top;">~<br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-    </tr>
-    <tr>
-      <td style="vertical-align: top;">11.8 mAtFloor is Target --> Set Target<br>
+      <td style="vertical-align: top;">11.7 When Idle--> Set mDesiredFloor.f to first Target<br>
       </td>
       <td style="vertical-align: top;">X<br>
       </td>
@@ -1009,7 +966,21 @@ Requirements/Constraints</b></u></td>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">11.9 mAtFloor is Target --> Set Target<br>
+      <td style="vertical-align: top;">11.8 mDesiredDirecation was Up--> Set Target to upper floor<br>
+      </td>
+      <td style="vertical-align: top;">X<br>
+      </td>
+      <td style="vertical-align: top;">~<br>
+      </td>
+      <td style="vertical-align: top;">~<br>
+      </td>
+      <td style="vertical-align: top;"><br>
+      </td>
+      <td style="vertical-align: top;"><br>
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;">11.9 mDesiredDirecation was Down--> Set Target to lower floor<br>
       </td>
       <td style="vertical-align: top;">X<br>
       </td>
@@ -1024,7 +995,7 @@ Requirements/Constraints</b></u></td>
     </tr>
     <tr>
       <td style="vertical-align: top;">11.10 Target lower --> set 
-      Target<br>
+      Target to closest<br>
       </td>
       <td style="vertical-align: top;">X<br>
       </td>
@@ -1039,7 +1010,7 @@ Requirements/Constraints</b></u></td>
     </tr>
     <tr>
       <td style="vertical-align: top;">11.11 Target higher --> set 
-      Target<br>
+      Target to closest<br>
       </td>
       <td style="vertical-align: top;">X<br>
       </td>
@@ -1056,6 +1027,62 @@ Requirements/Constraints</b></u></td>
       <td style="vertical-align: top;">11.12 no Call --> set 
       mDesiredFloor.d to STOP<br>
       </td>
+      <td style="vertical-align: top;">X<br>
+      </td>
+      <td style="vertical-align: top;">~<br>
+      </td>
+      <td style="vertical-align: top;">~<br>
+      </td>
+      <td style="vertical-align: top;"><br>
+      </td>
+      <td style="vertical-align: top;"><br>
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;">11.13 More calls in same direction-->set same mDesiredFloor.d<br>
+      </td>
+      <td style="vertical-align: top;">X<br>
+      </td>
+      <td style="vertical-align: top;">~<br>
+      </td>
+      <td style="vertical-align: top;">~<br>
+      </td>
+      <td style="vertical-align: top;"><br>
+      </td>
+      <td style="vertical-align: top;"><br>
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;">11.14 No more calls in same direction-->set mDesiredFloor.f to furthest<br>
+      </td>
+      <td style="vertical-align: top;">X<br>
+      </td>
+      <td style="vertical-align: top;">~<br>
+      </td>
+      <td style="vertical-align: top;">~<br>
+      </td>
+      <td style="vertical-align: top;"><br>
+      </td>
+      <td style="vertical-align: top;"><br>
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;">11.15 No further call-->change mDesiredFloor.d<br>
+      </td>
+      <td style="vertical-align: top;">X<br>
+      </td>
+      <td style="vertical-align: top;">~<br>
+      </td>
+      <td style="vertical-align: top;">~<br>
+      </td>
+      <td style="vertical-align: top;"><br>
+      </td>
+      <td style="vertical-align: top;"><br>
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;">11.16 set mDesiredFloor.b accordingly<br>
+      </td>
       <td style="vertical-align: top;">~<br>
       </td>
       <td style="vertical-align: top;">~<br>
@@ -1068,25 +1095,11 @@ Requirements/Constraints</b></u></td>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">11.13 set mDesiredFloor.d<br>
+      <td style="vertical-align: top;">11.17 set constant mDesiredDwell<br>
       </td>
       <td style="vertical-align: top;">~<br>
       </td>
-      <td style="vertical-align: top;">X<br>
-      </td>
       <td style="vertical-align: top;">~<br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-    </tr>
-    <tr>
-      <td style="vertical-align: top;">11.14 set mDesiredFloor.d<br>
-      </td>
-      <td style="vertical-align: top;">~<br>
-      </td>
-      <td style="vertical-align: top;">X<br>
       </td>
       <td style="vertical-align: top;">~<br>
       </td>
@@ -1095,42 +1108,14 @@ Requirements/Constraints</b></u></td>
       <td style="vertical-align: top;"><br>
       </td>
     </tr>
-    <tr>
-      <td style="vertical-align: top;">11.15 change mDesiredFloor.d<br>
-      </td>
-      <td style="vertical-align: top;">~<br>
-      </td>
-      <td style="vertical-align: top;">X<br>
-      </td>
-      <td style="vertical-align: top;">~<br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-    </tr>
-    <tr>
-      <td style="vertical-align: top;">11.16 set mDesiredFloor.b<br>
+	<tr>
+      <td style="vertical-align: top;">11.18 Ignore any calls if commit point reaached<br>
       </td>
       <td style="vertical-align: top;">~<br>
       </td>
       <td style="vertical-align: top;">~<br>
       </td>
-      <td style="vertical-align: top;">X<br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-    </tr>
-    <tr>
-      <td style="vertical-align: top;">11.19 set mDesiredDwell<br>
-      </td>
       <td style="vertical-align: top;">~<br>
-      </td>
-      <td style="vertical-align: top;">~<br>
-      </td>
-      <td style="vertical-align: top;">X<br>
       </td>
       <td style="vertical-align: top;"><br>
       </td>
