--- a/portfolio/portfolio/traceability/req_const_traceability.html
+++ b/portfolio/portfolio/traceability/req_const_traceability.html
@@ -182,7 +182,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td style="vertical-align: top;">5.9.1 dwell expires --&gt; door nudge <br>
+                    <td style="vertical-align: top;">5.9.1 dwell expires --&gt; door close <br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
@@ -196,7 +196,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td style="vertical-align: top;">5.9.2 dwell expires --&gt; door nudge <br>
+                    <td style="vertical-align: top;">5.9.2 dwell expires --&gt; door close <br>
                     </td>
                     <td style="vertical-align: top;">~<br>
                     </td>
